# version_macro

./: .travis.yml  Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs
